--- a/.github/DOM/first.html
+++ b/.github/DOM/first.html
@@ -4,11 +4,27 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document Object Model </title>
+    <style>
+        .bg-black{
+            background-color: #212121;
+            color: #fff;
+        }
+
+        
+    </style>
 </head>
-<body>
-    <div class="bg-black">
-        <h1 id="title" class="heading">DOM LEARNING</h1>
+<body class="bg-black">
+    <div>
+        <h1 id="title" class="heading">DOM LEARNING <span style="display: none;">test text</span></h1>
+        <h2>Lorem ipsum dolor sit</h2>
+        <h2>Lorem ipsum dolor sit</h2>
+        <h2>Lorem ipsum dolor sit</h2>
         <p>Lorem ipsum dolor sit amet consectetur</p>
+        <ul>
+            <li class="li-item">number 1</li>
+            <li class="li-item">number 2</li>
+            <li class="li-item">number 3</li>
+        </ul>
     </div>
 </body>
 </html>
